# tsl

./: CMakeLists.txt
include/tsl/: attributes.hpp  concepts.hpp  config.hpp  cstring.hpp  cstring_ref.hpp  defer.hpp  literal_string.hpp  macros.hpp  maybe.hpp  type_traits.hpp
include/tsl/internal/: abort.hpp  maybe_backends.hpp
include/tsl/types/: contracts.hpp  non_negative.hpp  unchecked.hpp
include/tsl/util/: exception_type_name.hpp
linux/: API.md  CMakeLists.txt
linux/include/tsl/linux/: file.hpp  subprocess.hpp
linux/src/: file.cpp  subprocess.cpp
src/tsl/internal/: abort.cpp
src/tsl/util/: exception_type_name.cpp
tests/: CMakeLists.txt  main.cpp
